integrate OpenAI API and simplify results output to check

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
-# OpenAI API Key (for testing)
-OPENAI_API_KEY=your-api-key-here
+# OpenAI API Configuration
+OPENAI_API_KEY=your_api_key_here
+OPENAI_MODEL=gpt-4-turbo-preview  # or gpt-3.5-turbo for faster, cheaper responses
+
+# Rate Limiting (optional)
+MAX_REQUESTS_PER_MINUTE=10
 
 # Optional: Environment
 NODE_ENV=development 
