cleanup and readme

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,5 @@
-# OpenAI API Configuration
-OPENAI_API_KEY=your_api_key_here
-OPENAI_MODEL=gpt-4-turbo-preview  # or gpt-3.5-turbo for faster, cheaper responses
+# Environment Configuration
+NODE_ENV=development
 
-# Rate Limiting (optional)
-MAX_REQUESTS_PER_MINUTE=10
-
-# Optional: Environment
-NODE_ENV=development 
+# Note: OpenAI API keys are now provided by users directly in the UI
+# No environment variables are required for the OpenAI integration 
